Fixes spacing and sizing problems. Adds hover state to items in the toolbox menu. Replaces icon style with i.

--- a/scss/toolbox.scss
+++ b/scss/toolbox.scss
@@ -169,7 +169,7 @@
 	font-family:$sans;
 	font-weight:400;
 	float:left;
-	margin:0px 0 0 0;
+	margin:8px 0 0 0;
 	text-align:center;
 	width:345px;
 	list-style-type: none;
@@ -188,6 +188,9 @@
 		font-size:em(14);
 		line-height:1.4em;
 		width:80px;
+		@include transition;
+		cursor:pointer;
+
 		
 			@media screen and (max-width:em(690)) 
 			{
@@ -197,29 +200,42 @@
 			line-height:1em;
 			}
 
+				i
+				{
+				width:100%;
+				height:18px;
+				display:block;
+				font-size:em(24);
+				color:#737373;
+				margin:0px 0 0px 0;
+				@include transition;
+		
+					@media screen and (max-width:em(690)) 
+					{
+					font-size:em(18);
+					}	
+		
+					@media screen and (max-width:em(500)) 
+					{
+					display:none;
+					}
+		
+				}
+			&:hover
+			{
+			color:$light_gray;
+			
+				i
+				{
+				color:$light_gray;
+				}
+			
+			}
+			
+
 		}
 	
-		i
-		{
-		width:100%;
-		height:24px;
-		display:block;
-		font-size:em(24);
-		color:#737373;
-		margin:0px 0 3px 0;
-		margin-bottom:0px;	
 		
-			@media screen and (max-width:em(690)) 
-			{
-			font-size:em(18);
-			}	
-		
-			@media screen and (max-width:em(500)) 
-			{
-			display:none;
-			}
-		
-		}
 		
 	
 		@media screen and (max-width:em(500)) 
@@ -302,6 +318,8 @@
 			line-height:1.2em;
 			@include spanner (4, 450, 0, 1);
 			padding:0 4px;
+			cursor:pointer;
+			@include transition;
 			
 			.break
 				{
@@ -311,26 +329,33 @@
 				display:block;
 				}
 			}	
-			
-			
-					.icon
+						
+					i
 					{
 					width:100%;
-					height:24px;
+					height:17px;
 					display:block;
 					font-size:em(24);
 					color:#737373;
 					margin:0px 0 3px 0;
 					margin-bottom:0px;
+					@include transition;
 					}
-
+					
+					&:hover
+					{
+					color:$light_gray;
 			
-			
-			
+						i
+						{
+						color:$light_gray;
+						}
+					}		
+					
 			}
-	
+
 		}
-	}
+	
 	
 	
 	
